most functionality working, need to fix overflow issue, create pixel size preferences

--- a/style.css
+++ b/style.css
@@ -1,10 +1,31 @@
+body {
+    text-align: center;
+}
+
+.etched {
+    background-color: black;
+}
+
 .pixel {
-    border: 1px solid black;
-    width: 50px;
-    height: 50px;
+    
 }
 
 .row {
     display: flex;
     justify-content: center;
+}
+
+
+
+#container {
+    background-color: #EFEFEF;
+    border: 40px solid #EE0000;
+    border-radius: 10px;
+    margin: auto;
+    width: 600px;
+    height: 600px;
+}
+
+#settings {
+    margin: 10px 0px;
 }
